<resources>
    <string name="app_name">Newspaper</string>
    <string name="article_image">Article image</string>
    <string name="login_button">Login button</string>
    <string name="logout_button">Logout button</string>
    <string name="username">Username</string>
    <string name="username_hint">username</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="login_button_text">Log in!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="welcome_back_home_page">Welcome back,</string>
    <string name="choose_filter">Choose which articles you want to see:</string>

    <string name="national">National</string>
    <string name="economy">Economy</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="all">All</string>

    <string-array name="categories">
        <item>National</item>
        <item>Economy</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="edit_article">Edit article</string>
    <string name="delete_article">Delete article</string>
    <string name="confirm_deletion">Are you sure you want to delete the article?</string>
    <string name="deletion_warning">This action cannot be reverted.</string>
    <string name="delete">Delete</string>
    <string name="edition_warning">You are about to edit this article!</string>
    <string name="confirm_edition">You will be able to edit the article\'s picture, do you want to use one of your pictures or take a new one?</string>
    <string name="edit">Edit</string>
    <string name="article_title_form">Article title *</string>
    <string name="article_subtitle_form">Article subtitle *</string>
    <string name="article_abstract_form">Article abstract *</string>
    <string name="article_body_form">Article body *</string>
    <string name="create_article">CREATE ARTICLE</string>
    <string name="article_category_form">Article category *</string>
    <string name="add_image">ADD IMAGE TO THE ARTICLE</string>
    <string name="use_existing">Use existing</string>
    <string name="take_new_one">Take new one</string>
    <string name="change_image_desc">Do you want to change the image description?</string>
    <string name="accept">Accept</string>
    <string name="use_current">Use current</string>
    <string name="change_desc">Change desc</string>
    <string name="loading_data">Loading data...</string>
    <string name="add_image_desc">Do you want to add an image description?</string>
    <string name="add_image_desc_btn">Add image desc</string>
    <string name="app_logo">app logo</string>
    <string name="data_missing">Article data is missing</string>
    <string name="download_articles_error">Error retrieving the articles</string>
    <string name="error_occurred">An error occurred, try again later</string>
    <string name="cannot_retrieve_article">Selected article cannot be retrieved</string>
</resources>